[tool.poetry]
name = "cheltyomov-homework-9-3"
version = "0.1.0"
description = ""
authors = ["Andrey Cheltyomov <master.haunt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
isort = "^5.13.2"
black = "^24.4.2"
mypy = "^1.10.0"

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.black]
# Максимальная длина строки
line-length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
